Load students performance dataset

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,6 +22,44 @@
     "\n",
     "print(\"Environment ready\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ca46e79a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 8)\n",
+      "   gender race/ethnicity parental level of education         lunch  \\\n",
+      "0  female        group B           bachelor's degree      standard   \n",
+      "1  female        group C                some college      standard   \n",
+      "2  female        group B             master's degree      standard   \n",
+      "3    male        group A          associate's degree  free/reduced   \n",
+      "4    male        group C                some college      standard   \n",
+      "\n",
+      "  test preparation course  math score  reading score  writing score  \n",
+      "0                    none          72             72             74  \n",
+      "1               completed          69             90             88  \n",
+      "2                    none          90             95             93  \n",
+      "3                    none          47             57             44  \n",
+      "4                    none          76             78             75  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset (make sure the file name matches exactly)\n",
+    "df = pd.read_csv(\"StudentsPerformance.csv\")\n",
+    "\n",
+    "# Look at basic info\n",
+    "print(df.shape)\n",
+    "print(df.head())\n"
+   ]
   }
  ],
  "metadata": {
