Add average_score and passed label

--- a/main.ipynb
+++ b/main.ipynb
@@ -140,8 +140,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5f406672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   math score  reading score  writing score  average_score\n",
+      "0          72             72             74      72.666667\n",
+      "1          69             90             88      82.333333\n",
+      "2          90             95             93      92.666667\n",
+      "3          47             57             44      49.333333\n",
+      "4          76             78             75      76.333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an average score column\n",
+    "df[\"average_score\"] = df[[\"math score\", \"reading score\", \"writing score\"]].mean(axis=1)\n",
+    "\n",
+    "print(df[[\"math score\", \"reading score\", \"writing score\", \"average_score\"]].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3cf213a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "passed\n",
+      "0    541\n",
+      "1    459\n",
+      "Name: count, dtype: int64\n",
+      "   average_score  passed\n",
+      "0      72.666667       1\n",
+      "1      82.333333       1\n",
+      "2      92.666667       1\n",
+      "3      49.333333       0\n",
+      "4      76.333333       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a binary label: 1 = pass, 0 = fail\n",
+    "df[\"passed\"] = (df[\"average_score\"] >= 70).astype(int)\n",
+    "\n",
+    "print(df[\"passed\"].value_counts())\n",
+    "print(df[[\"average_score\", \"passed\"]].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a96402b",
    "metadata": {},
    "outputs": [],
    "source": []
