--- a/main.ipynb
+++ b/main.ipynb
@@ -197,8 +197,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a96402b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (800, 15)\n",
+      "Test shape: (200, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Features (drop the label and any columns we don't want the model to see)\n",
+    "X = df.drop(columns=[\"passed\", \"average_score\"])\n",
+    "y = df[\"passed\"]\n",
+    "\n",
+    "# One-hot encode categorical features\n",
+    "X_encoded = pd.get_dummies(X, drop_first=True)\n",
+    "\n",
+    "# Split into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_encoded, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "print(\"Train shape:\", X_train.shape)\n",
+    "print(\"Test shape:\", X_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "33504281",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n",
+      "\n",
+      "Classification report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       108\n",
+      "           1       1.00      1.00      1.00        92\n",
+      "\n",
+      "    accuracy                           1.00       200\n",
+      "   macro avg       1.00      1.00      1.00       200\n",
+      "weighted avg       1.00      1.00      1.00       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train logistic regression model\n",
+    "log_reg = LogisticRegression(max_iter=1000)\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "y_pred = log_reg.predict(X_test)\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", acc)\n",
+    "print(\"\\nClassification report:\\n\", classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14a97532",
    "metadata": {},
    "outputs": [],
    "source": []
