--- a/main.ipynb
+++ b/main.ipynb
@@ -271,8 +271,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "14a97532",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForest accuracy: 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators=200,\n",
+    "    random_state=42\n",
+    ")\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "acc_rf = accuracy_score(y_test, y_pred_rf)\n",
+    "print(\"RandomForest accuracy:\", acc_rf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d38fdd74",
    "metadata": {},
    "outputs": [],
    "source": []
