Add markdown summaries for Day 1

--- a/main.ipynb
+++ b/main.ipynb
@@ -305,6 +305,35 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed1a3acc",
+   "metadata": {},
+   "source": [
+    "# Student Performance Predictor – Day 1\n",
+    "\n",
+    "- Loaded StudentsPerformance dataset\n",
+    "- Performed initial EDA and plotted score distributions\n",
+    "- Created `average_score` and `passed` label\n",
+    "- Trained LogisticRegression model (Accuracy: 1.0 on test set)\n",
+    "- Added RandomForest model for comparison\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b46a96db",
+   "metadata": {},
+   "source": [
+    "## Model comparison (Day 1)\n",
+    "\n",
+    "- LogisticRegression accuracy: 1.0  \n",
+    "- RandomForest accuracy: 1.0  \n",
+    "- This dataset is easy to separate; next steps:\n",
+    "  - Add cross-validation\n",
+    "  - Look at feature importances / coefficients\n",
+    "  - Improve documentation in README\n"
+   ]
   }
  ],
  "metadata": {
