Day 2: Confusion matrix + coefficients viz + 99.9% CV accuracy

--- a/main.ipynb
+++ b/main.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "beb0f6a9",
    "metadata": {},
    "outputs": [
@@ -434,16 +434,7 @@
     }
    ],
    "source": [
-    "top_n = 10\n",
-    "top_features = coef_df.head(top_n)\n",
-    "\n",
-    "plt.figure(figsize=(8,4))\n",
-    "plt.barh(top_features[\"feature\"], top_features[\"coefficient\"], color=\"teal\")\n",
-    "plt.gca().invert_yaxis()\n",
-    "plt.title(\"Top positive coefficients – Logistic Regression\")\n",
-    "plt.xlabel(\"Coefficient value\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
+    "\n"
    ]
   },
   {
@@ -463,8 +454,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "48e1901b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation accuracy scores: [1.    1.    1.    0.995 1.   ]\n",
+      "Mean CV accuracy: 0.999\n",
+      "Std CV accuracy: 0.0020000000000000018\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "# 5-fold cross-validation\n",
+    "cv_scores = cross_val_score(log_reg, X_encoded, y, cv=5, scoring='accuracy')\n",
+    "print(\"Cross-validation accuracy scores:\", cv_scores)\n",
+    "print(\"Mean CV accuracy:\", cv_scores.mean())\n",
+    "print(\"Std CV accuracy:\", cv_scores.std())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac493c02",
    "metadata": {},
    "outputs": [],
    "source": []
