Complete model comparison: LR vs RF CV scores

--- a/main.ipynb
+++ b/main.ipynb
@@ -300,6 +300,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "ee02d5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest CV scores: [0.98  0.995 0.98  0.975 0.98 ]\n",
+      "RF Mean CV accuracy: 0.982\n",
+      "Logistic Regression CV: 0.999\n",
+      "Winner: Logistic\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_cv_scores = cross_val_score(rf, X_encoded, y, cv=5, scoring='accuracy')\n",
+    "print(\"Random Forest CV scores:\", rf_cv_scores)\n",
+    "print(\"RF Mean CV accuracy:\", rf_cv_scores.mean())\n",
+    "print(\"Logistic Regression CV:\", cv_scores.mean())\n",
+    "print(\"Winner:\", \"RF\" if rf_cv_scores.mean() > cv_scores.mean() else \"Logistic\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "d38fdd74",
    "metadata": {},
