Tune RF model and clarify app output

--- a/main.ipynb
+++ b/main.ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "620f6f75",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "a7b2503a",
    "metadata": {},
    "outputs": [
@@ -794,6 +794,113 @@
     "joblib.dump(rf, \"rf_model.joblib\")\n",
     "print(\"Saved RF model with target = passed (1/0).\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1a82fae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Features: three scores\n",
+    "X = df[['math score', 'reading score', 'writing score']]\n",
+    "y = df['passed']   # 1 = pass, 0 = fail\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "24ec3f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression CV scores: [1. 1. 1. 1. 1.]\n",
+      "Logistic Regression mean acc: 1.0\n",
+      "Random Forest CV scores: [0.99  0.97  0.995 0.99  0.995]\n",
+      "Random Forest mean acc: 0.9880000000000001\n",
+      "Winner (3-score features): Logistic Regression\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logistic Regression (baseline)\n",
+    "log_clf = LogisticRegression(max_iter=1000)\n",
+    "log_cv_scores = cross_val_score(log_clf, X, y, cv=5)  # 5-fold CV\n",
+    "print(\"Logistic Regression CV scores:\", log_cv_scores)\n",
+    "print(\"Logistic Regression mean acc:\", log_cv_scores.mean())\n",
+    "\n",
+    "# Random Forest (current simple model)\n",
+    "rf_clf = RandomForestClassifier(random_state=42)\n",
+    "rf_cv_scores = cross_val_score(rf_clf, X, y, cv=5)\n",
+    "print(\"Random Forest CV scores:\", rf_cv_scores)\n",
+    "print(\"Random Forest mean acc:\", rf_cv_scores.mean())\n",
+    "\n",
+    "winner = \"Random Forest\" if rf_cv_scores.mean() > log_cv_scores.mean() else \"Logistic Regression\"\n",
+    "print(\"Winner (3-score features):\", winner)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1d87d6b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuned RF CV scores: [0.995 0.97  0.995 0.99  0.995]\n",
+      "Tuned RF mean acc: 0.9890000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try a slightly larger forest and limited depth\n",
+    "rf_tuned = RandomForestClassifier(\n",
+    "    n_estimators=200,\n",
+    "    max_depth=10,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "rf_tuned_cv = cross_val_score(rf_tuned, X, y, cv=5)\n",
+    "print(\"Tuned RF CV scores:\", rf_tuned_cv)\n",
+    "print(\"Tuned RF mean acc:\", rf_tuned_cv.mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b6863d2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved tuned RF model to rf_model.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_tuned.fit(X, y)\n",
+    "joblib.dump(rf_tuned, \"rf_model.joblib\")\n",
+    "print(\"Saved tuned RF model to rf_model.joblib\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f34e91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
